--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <!-- Show Case -->
-{% include 'paritals/_alerts.html' %}
+{% include 'partials/_alerts.html' %}
 <section id="showcase">
     <div class="container text-center">
       <div class="home-search p-5">
