--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} | Register for BT Real Estate  {% endblock %}
+
 {% block content %}
   <section id="register" class="bg-light py-5">
     <div class="container">
