--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,10 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!-- Lightbox -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/css/lightbox.min.css">
-    <title>BT Real Estate</title>
+    
+    <title>BT Real Estate
+      {% block title %}{% endblock %}
+    </title>
   </head>
   <body>
     <!-- Top Bar -->
