--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,6 +2,8 @@
 
 {% load humanize %}
 
+{% block title %} | Welcome  {% endblock %}
+
 {% block content %}
 <!-- Show Case -->
 {% include 'partials/_alerts.html' %}
